<resources>
    <string name="app_name">MTGCounter</string>
    <string name="zero">00</string>
    <string name="life">20</string>
    <string name="plus">＋</string>
    <string name="minus">−</string>
    <string name="commit">Commit</string>
    <string name="pending">Pending</string>
    <string name="turn_hint">Life</string>
    <string name="comment">Comment</string>
    <string name="slash">/</string>

    <string name="label_player">Player</string>
    <string name="label_player0">1</string>
    <string name="label_player1">2</string>
    <string name="label_player2">3</string>
    <string name="label_player3">4</string>

    <string name="label_type">Type</string>
    <string name="label_life">Life</string>
    <string name="label_commander">Commander</string>
    <string name="label_player_counter0">Life/P/Ex/En</string>
    <string name="label_commander0">C1</string>
    <string name="label_commander1">C2</string>
    <string name="label_commander2">C3</string>
    <string name="label_commander3">C4</string>

    <string name="label_poison">Poison</string>
    <string name="label_experience">Experience</string>
    <string name="label_energy">Energy</string>

    <string name="label_mana">Mana</string>
    <string name="label_storm">(Storm)</string>
    <string name="label_draw">(Draw)</string>
    <string name="label_other_radio">(Other)</string>
    <string name="label_other">Other</string>

    <string name="turn_date">YYYY-MM-dd</string>
    <string name="turn_time">HH:mm:ss</string>

    <string name="header_turn_time">Turn/Time</string>
    <string name="title">Title</string>

    <string name="about">About</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="delete_all">Delete All</string>
    <string name="menu_new">New Game</string>
    <string name="menu_commander">Commander Life</string>
    <string name="menu_delete">Delete</string>

    <string name="commander">40</string>
</resources>
