<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/history_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="2"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/history_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/turn_date" />

    <TextView
        android:id="@+id/history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

</LinearLayout>