<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <EditText
        android:id="@+id/game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textMultiLine|text"
        android:maxLines="3"
        tools:targetApi="o" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:text="@string/header_turn_time"
            android:textSize="@dimen/turn_font_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_player"
                    android:textColor="@color/player0"
                    android:textSize="@dimen/turn_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_player0"
                    android:textColor="@color/player0"
                    android:textSize="@dimen/turn_font_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_player"
                    android:textColor="@color/player1"
                    android:textSize="@dimen/turn_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_player1"
                    android:textColor="@color/player1"
                    android:textSize="@dimen/turn_font_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_player"
                    android:textColor="@color/player2"
                    android:textSize="@dimen/turn_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_player2"
                    android:textColor="@color/player2"
                    android:textSize="@dimen/turn_font_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_player"
                    android:textColor="@color/player3"
                    android:textSize="@dimen/turn_font_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_player3"
                    android:textColor="@color/player3"
                    android:textSize="@dimen/turn_font_size" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/game_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>